@@ -1,3 +1,9 @@
+2004-10-18 Derek Price <derek@ximbiot.com>
+
+	* cvs.h (DEVNULL): This is system dependant.  Move it to lib/system.h.
+	* client.c (copy_a_file): Consolidate USE_VMS_FILENAMES stuff under a
+	single #ifdef.
+
 2004-10-15 Derek Price <derek@ximbiot.com>
 
 	* cvs.h: Don't include vasnprintf.h.
